--- a/.inputrc
+++ b/.inputrc
@@ -1,4 +1,10 @@
+# Enable vi mode
+set editing-mode vi
+
+# insert/command mode indicator
 set show-mode-in-prompt on
+
+# Indicator formatting in prompt:
 set vi-ins-mode-string "+"
 set vi-cmd-mode-string ":"
 set vi-cmd-mode-string "\1\e[1;31m\2:\1\e[0m\2"
