fixed tmux shell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,8 @@
 unbind C-b
 set -g prefix C-a
 
-set-option -g default-shell /bin/bash
+#new -n bash bash --login
+set-option -g default-shell $SHELL
 
 # Binding to reload config file, useful for tweaking tmux
 bind R source ~/.tmux.conf \; display-message "Conf reloaded..."
@@ -21,14 +22,14 @@ setw -g mode-keys vi
 # vim's definition of a horizontal/vertical split is reversed from tmux's
 bind s split-window -v
 bind v split-window -h
- 
+
 # resize panes like vim
 # feel free to change the "1" to however many lines you want to resize by, only
 # one at a time can be slow
 bind < resize-pane -L 10
 bind > resize-pane -R 10
 bind - resize-pane -D 10
-bind + resize-pane -U 10 
+bind + resize-pane -U 10
 
 # copy and pasting
 # <C-v> (ctrl+shift+v) to paste)
