fixed colorscheme, cleaned up vim and tmux configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,10 @@ set -g mouse on
 # act like vim
 setw -g mode-keys vi
 
+# -----------------------------------------------------------------------------
+# Key bindings
+# -----------------------------------------------------------------------------
+
 # split windows like vim
 # vim's definition of a horizontal/vertical split is reversed from tmux's
 bind s split-window -v
@@ -37,7 +41,7 @@ bind + resize-pane -U 10
 # source 3:
 ## <Prefix>-y to copy whatever is in your top tmux buffer to your system clipboard.
 ## requires: sudo apt-get install xclip
-bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
+#bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
 #bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
 # Send the same command to all panes/windows/sessions
@@ -49,16 +53,24 @@ bind E command-prompt -p "Command:" \
 
 # bind E command-prompt -p "Command:" \ "run \"tmux list-sessions -F '##{session_name}' | xargs -I SESS \ tmux list-windows -t SESS -F 'SESS:##{window_index}' | xargs -I SESS_WIN \ tmux list-panes -t SESS_WIN -F 'SESS_WIN.##{pane_index}' | xargs -I SESS_WIN_PANE \ tmux send-keys -t SESS_WIN_PANE '%1' Enter\""
 
+# -----------------------------------------------------------------------------
+# Plugin Manager - https://github.com/tmux-plugins/tpm
+# In order to use the plugins below you need to install TPM and the plugins.
+#   Step 1) git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+#   Step 2) Reload tmux if it's already started with `r
+#   Step 3) Launch tmux and hit `I (capital i) to fetch any plugins
+# -----------------------------------------------------------------------------
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-
+set -g @plugin 'tmux-plugins/tmux-yank'''
 
 # Initialize TMUX plugin manager keep this line at the very( bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
 
 # sources
-## https://github.com/ryanoasis/dotfiles/blob/master/.tmux.conf                 
+## https://github.com/ryanoasis/dotfiles/blob/master/.tmux.conf
 ## https://gist.github.com/rssvihla/789284
 ## https://github.com/alerque/que-tmux/blob/master/.tmux.conf
 ## http://blog.joncairns.com/2013/06/copying-between-tmux-buffers-and-the-system-clipboard/
