--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,7 +64,7 @@ bind E command-prompt -p "Command:" \
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-yank'''
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager keep this line at the very( bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
