--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+# -----------------------------------------------------------------------------
+# General settings
+# -----------------------------------------------------------------------------
+
 # default prefix mappings start with ^b (ctrl+b) then bound key(s)
 # lets make it less stressful on my poor hands:
 # act like GNU screen
@@ -66,10 +70,26 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+# ==============================================
+# ===   Nesting local and remote sessions     ===
+# ==============================================
+
+# Session is considered to be remote when we ssh into host
+if-shell 'test -n "$SSH_CLIENT"' \
+    'source-file ~/.tmux/tmux.remote.conf'
+
+# We want to have single prefix key "C-a", usable both for local and remote session
+# we don't want to "C-a" + "a" approach either
+# Idea is to turn off all key bindings and prefix handling on local session,
+# so that all keystrokes are passed to inner/remote session
+
+# see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
+
 # Initialize TMUX plugin manager keep this line at the very( bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
 
 # sources
+## https://github.com/samoshkin/tmux-config/blob/master/tmux/tmux.conf
 ## https://github.com/ryanoasis/dotfiles/blob/master/.tmux.conf
 ## https://gist.github.com/rssvihla/789284
 ## https://github.com/alerque/que-tmux/blob/master/.tmux.conf
