fixed tmux remote session access

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,12 +7,13 @@
 # act like GNU screen
 unbind C-b
 set -g prefix C-a
+bind a send-prefix
 
 #new -n bash bash --login
 set-option -g default-shell $SHELL
 
 # Binding to reload config file, useful for tweaking tmux
-bind R source ~/.tmux.conf \; display-message "Conf reloaded..."
+bind r source ~/.tmux.conf \; display-message "Conf reloaded..."
 
 # color
 set -g default-terminal "screen-256color"
@@ -75,8 +76,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # ==============================================
 
 # Session is considered to be remote when we ssh into host
-if-shell 'test -n "$SSH_CLIENT"' \
-    'source-file ~/.tmux/tmux.remote.conf'
+#if-shell 'test -n "$SSH_CLIENT"' \
+    #'source-file ~/.tmux/tmux.remote.conf'
 
 # We want to have single prefix key "C-a", usable both for local and remote session
 # we don't want to "C-a" + "a" approach either
