--- a/schemes/gruvbox/gruvbox_dark_medium_lxterminal.conf
+++ b/schemes/gruvbox/gruvbox_dark_medium_lxterminal.conf
@@ -1,9 +1,9 @@
 [general]
-fontname=Monospace 10
+fontname=Hack Bold 12
 selchars=-A-Za-z0-9,./?%&#:_
 scrollback=1000
-bgcolor=rgb(253,246,227)
-fgcolor=rgb(101,123,131)
+bgcolor=rgb(40,40,40)
+fgcolor=rgb(235,219,178)
 palette_color_0=rgb(40,40,40)
 palette_color_1=rgb(204,36,29)
 palette_color_2=rgb(152,151,26)
@@ -20,7 +20,7 @@ palette_color_12=rgb(131,165,152)
 palette_color_13=rgb(211,134,155)
 palette_color_14=rgb(142,192,124)
 palette_color_15=rgb(235,219,178)
-color_preset=Gruvbox Dark
+color_preset=Custom
 disallowbold=false
 cursorblinks=true
 cursorunderline=false
@@ -51,3 +51,4 @@ move_tab_right_accel=<Primary><Shift>Page_Down
 zoom_in_accel=<Primary><Shift>plus
 zoom_out_accel=<Primary><Shift>underscore
 zoom_reset_accel=<Primary><Shift>parenright
+
